bugfix gatewayheaderfilter